[project]
name = "sql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.123.9",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
    "bcrypt>=4.2.0",
    "requests>=2.32.0",
    "PyJWT>=2.9.0",
    "pillow>=12.0.0",
    "pypinyin>=0.55.0",
    "python-multipart>=0.0.20",
    "apscheduler>=3.10.4",
    "pycryptodome>=3.20.0",
]

[[tool.uv.index]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"

